<resources>
    <string name="app_name">Gabarrón</string>
    <string name="cat_logo">Catálogo</string>
    <string name="listas">Listas</string>
    <string name="historial">Historial</string>
    <string name="title_activity_catalogo">Catálogo</string>
    <string name="title_activity_historial">Historial</string>
    <string name="title_activity_listas">Listas</string>
    <string name="title_activity_lista">Lista</string>
    <string name="title_activity_carrito">Carrito</string>
    <string name="boton_login">Entrar</string>
    <string name="boton_registrar">Registrarse</string>
    <string name="et_nombre_usuario">Nombre de usuario</string>
    <string name="et_password">Password</string>
    <string name="et_telefono">Teléfono</string>
    <string name="et_email">Email</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="info_text">Ingresa con tu cuenta o registrate</string>
    <string name="recordar_check">Recordarme</string>
    <string name="olvidar_text">¿Olvidaste tu contraseña?</string>
    <string name="catalogo">Catálogo</string>
    <string name="opciones">Opciones</string>
    <string name="actualizar_catalogo">Actualizar catálogo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Inicia sesión</string>
    <string name="error_login">El usuario o la contraseña no es correcto. Si no tiene usuario, registrese</string>
    <string name="error_registro">Usuario ya registrado. Pruebe a loguearse</string>
    <string name="sin_registro">Si no tiene usuario, registrese aquí</string>
    <string name="con_registro">Si ya tiene usuario, acceda desde aquí</string>
    <string name="conectando_msg">Conectando con el servidor…</string>
    <string name="progress_actualizacion">Actualizando catálogo…</string>
    <string name="descargando_actualizacion">Descargando actualización…</string>
    <string name="conection_ws_error">Error al conectar con el servidor</string>
    <string name="exito_actualizar">Catálogo actualizado con éxtito</string>
    <string name="salir_qu">¿Quiere salir de la aplicación?</string>
    <string name="salir">Salir</string>
    <string name="logout_qu">¿Quiere cerrar sesión?</string>
    <string name="logout">Cerrar sesión</string>
    <string name="empty_list">No hay elementos que mostrar</string>
    <string name="empty_list_carrito">No hay productos en el carrito\n ¡añade algo!</string>
    <string name="realizar_pedido">Realizar pedido</string>
    <string name="guardar_lista">Guardar en lista</string>
    <string name="vaciar_carrito">Vaciar carrito</string>
    <string name="vaciar_carrito_qu">Se borrarán todos los artículos añadidos al carrito \n\n¿Desea continuar?</string>
    <string name="ir_a_catalogo">Ir al catálogo</string>
    <string name="vaciar">Vaciar</string>
    <string name="title_activity_realizar_pedido">Realizar pedido</string>
    <string name="recogida">Recogida y confirmar</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora:</string>
    <string name="fecha_recogida">&lt;&lt;Fecha de recogida&gt;&gt;</string>
    <string name="hora_recogida">&lt;&lt;Hora de recogida&gt;&gt;</string>
    <string name="resumen_pedido">Resumen de pedido:</string>
    <string name="confirmar_pedido">Confirmar pedido</string>
    <string name="direccion_recogida">El pedido se recogerá en tienda, en la dirección  calle falsa nº13 </string>
    <string name="dia">Día: </string>
    <string name="select">Seleccionar</string>
    <string name="exito_enviar">Pedido enviado con éxito</string>
    <string name="error_enviar">El pedido no se ha enviado correctamente</string>
    <string name="error_envio">Error de envío</string>
    <string name="error_validacion">Error de validación</string>
    <string name="error_validar">Debe especificar una fecha y hora de recogida válidas</string>
    <string name="volver">Volver</string>
    <string name="recoger_en">Podrá recoger su pedido en\n\n <b>calle falsa nº 7</b> \n\n en la fecha y hora seleccionada:</string>
    <string name="pedido_realizado">Pedido realizado</string>
    <string name="inicio">Inicio</string>
    <string name="enviando_msg">Enviando pedido…</string>
    <string name="cargando_contenido">Cargando contenido…</string>
    <string name="nueva_lista">Nueva lista</string>
    <string name="nombre_lista">Introduce un nombre para la nueva lista</string>
    <string name="crear">Crear</string>
    <string name="introducir_nombre">Debe introducir un nombre para la lista</string>
    <string name="exito_guardar">Tu nueva lista se ha creado con éxito</string>
    <string name="lista">Lista</string>
    <string name="add_producto">Añadir productos</string>
    <string name="renombrar_lista">Renombrar lista</string>
    <string name="pedido">Pedido</string>
    <string name="volver_pedir">Volver a pedir</string>
    <string name="nuevo_nombre">Introduce el nuevo nombre de la lista</string>
    <string name="exito_actualizar_lista">Tu lista se ha actualizado con éxito</string>
    <string name="lista_nueva">Crear nueva lista</string>
    <string name="seleccionar_producto">Seleccionar productos</string>
    <string name="add_to">Añadir a </string>
    <string name="agregar_a_carrito">Agregar a carrito</string>
    <string name="agregados_productos">Lista añadida al carrito</string>


</resources>
