<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_catalogo"
            android:icon="@drawable/ic_menu_catalogo"
            android:title="@string/catalogo" />
        <item
            android:id="@+id/nav_lista"
            android:icon="@drawable/ic_menu_lista"
            android:title="@string/listas" />
        <item
            android:id="@+id/nav_historial"
            android:icon="@drawable/ic_menu_historial"
            android:title="@string/historial" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_actualizar"
                android:icon="@drawable/ic_system_update_alt_black_24dp"
                android:title="@string/actualizar_catalogo" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_salir"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
