<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.almerimatik.pedidostienda.activity.menuPrincipal">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:srcCompat="@drawable/logo200" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnCatalogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:onClick="abrirCatalogo"
                android:padding="25dp"
                android:text="@string/cat_logo"
                android:textSize="18sp" />
            <Button
                android:id="@+id/btnListas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="25dp"
                android:onClick="abrirListas"
                android:text="@string/listas"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/btnHistorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:onClick="abrirHistorial"
                android:text="@string/historial"
                android:textSize="18sp"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>
